fix overflow problem from main page

--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -2,4 +2,11 @@
     display: flex;
     flex-direction: row;
     margin-top: 10px;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+}
+
+p{
+    min-width: 0;
 }
